ingress/prometheus/alert-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alert-manager-ingress
  namespace: monitoring
  annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/alert-manager)$ $1/ redirect;
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /alert-manager(/|$)(.*)
          backend:
            service:
              name: alertmanager-main
              port:
                number: 9093
