ingress/prometheus/expression-browser.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expression-browser-ingress
  namespace: monitoring
  annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   rewrite ^(/expression-browser)$ $1/ redirect;
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          # path: /expression-browser(/|$)(.*)
          path: /expression-browser
          backend:
            service:
              name: prometheus-k8s
              port:
                number: 9090
