ingress/prometheus/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/grafana)$ $1/ redirect;
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /grafana(/|$)(.*)
          backend:
            service:
              name: grafana
              port:
                number: 3000
